[package]
name = "konabb"
version = "0.1.0"
edition = "2018"

[dependencies]
num = "0.2.0"
log = "0.4.6"
r2d2 = "0.8.4"
serde = "1.0.91"
redis = "0.10.0"
failure = "0.1.5"
dotenv = "0.14.1"
sentry = "0.15.5"
num-traits = "0.2.8"
validator = "0.8.0"
envconfig = "0.5.1"
num-derive = "0.2.5"
env_logger = "0.6.1"
r2d2_redis = "0.9.0"
serde_json = "1.0.39"
argonautica = "0.2.0"
sentry-actix = "0.15.5"
serde_derive = "1.0.91"
envconfig_derive = "0.5.1"
validator_derive = "0.8.0"
actix-web = "1.0.0-rc"
chrono = { version = "0.4.6", features = ["serde"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
pulldown-cmark = { version = "0.5.1", default-features = false }
jsonwebtoken = { git = "https://github.com/Keats/jsonwebtoken.git", rev = "0ccb61e" }
diesel = { version = "1.4.2", features = ["chrono", "mysql", "r2d2", "serde_json", "uuid"] }
