[package]
name = "konabb"
version = "0.1.0"
edition = "2018"

[dependencies]
num = "0.2.0"
log = "0.4.6"
r2d2 = "0.8.5"
serde = "1.0.97"
redis = "0.11.0"
failure = "0.1.5"
dotenv = "0.14.1"
sentry = "0.15.5"
actix-cors = "0.1.0"
num-traits = "0.2.8"
validator = "0.9.0"
envconfig = "0.5.1"
num-derive = "0.2.5"
env_logger = "0.6.2"
r2d2_redis = "0.10.1"
serde_json = "1.0.40"
argonautica = "0.2.0"
sentry-actix = "0.15.5"
serde_derive = "1.0.97"
envconfig_derive = "0.5.1"
validator_derive = "0.9.0"
actix-web = "1.0.0"
chrono = { version = "0.4.7", features = ["serde"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
pulldown-cmark = { version = "0.5.3", default-features = false }
jsonwebtoken = "6.0.1"
diesel = { version = "1.4.2", features = ["chrono", "mysql", "r2d2", "serde_json", "uuid"] }
